# fastapi-async-starter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: b02e1887613c_.py
app/: config.py  main.py
app/core/: config.py  schemas.py
app/core/auth/: fake_auth.py
app/core/database/: base.py  dependencies.py  mixins.py  session.py
app/core/pagination/: paginate.py  schemas.py
app/modules/users/: models.py  router.py  schemas.py
scripts/: makemigrations  start-dev.sh  start-prod.sh
