[tool.poetry]
name = "fastapi-starter"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
