[tool.poetry]
name = "fastapi-starter"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.109.0"
uvicorn = "^0.26.0"
pydantic = "2.5.3"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.0"
testcontainers = "^3.7.1"
pytest-asyncio = "^0.23.2"
pytest-httpx = "^0.28.0"
psycopg2-binary = "^2.9.9"
pytest-mock = "^3.12.0"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"
pytest-order = "^1.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
